<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/changephoto"
            android:id="@+id/btnchangephoto"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:background="@drawable/nice_button"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="@android:color/black"/>

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/image"
            android:contentDescription="@string/singlelistitemphoto"
            android:adjustViewBounds="true" />

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/newSignUpname" />
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/newSignUppassword"/>
        </android.support.design.widget.TextInputLayout>

        <!--Number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/newSignUpcontact_no" />
        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

</ScrollView>