<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:fillViewport="true"
    android:background="#505c70"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.romainpiel.shimmer.ShimmerTextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/signup"
            android:textColor="#ff1a1a"
            android:gravity="center"
            android:id="@+id/SignUpText"
            android:background="@drawable/bs"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            />
        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textCapWords"
                android:hint="@string/SignUpname" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="Username" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:hint="@string/SignUppassword"/>
        </android.support.design.widget.TextInputLayout>

        <!--Again Password -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/againpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:hint="@string/SignUpcontact_no" />
        </android.support.design.widget.TextInputLayout>



        <!--Age -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_age"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/SignUpage" />
        </android.support.design.widget.TextInputLayout>


            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/nextStep"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_gravity="right|center"
                fancy:fb_defaultColor="#247a3e"
                android:gravity="center"

                fancy:fb_focusColor="#000000"
                fancy:fb_fontIconResource="&#xf051;"
                fancy:fb_iconPosition="left"
                fancy:fb_radius="10dp"
                fancy:fb_text="Next"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                fancy:fb_textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>